# ECHI_Scene_Generartion

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  libri_demand_scene_gen.py  pyproject.toml  requirements.txt  ruff.toml
src/: README.md  babble_generator.py  echi_build_master.py  echi_scene_generator.py  echi_scene_renderer.py  echi_structure_generator.py  echi_visualiser.py  libri_demand_scene_gen.py  librispeech_utils.py  make_libri_index.py  segment_audio.py
src/conf/: __init__.py  babble_generator_config.yaml  config.yaml  echi_build_master_config.yaml  echi_scene_generator_config.yaml  echi_scene_renderer_config.yaml  echi_structure_generator_config.yaml  echi_visualiser_config.yaml  segment_audio_config.yaml
src/conf/audio/: default.yaml
src/conf/diffuse/: default.yaml
src/conf/master/: default.yaml
src/conf/paths/: default.yaml
src/conf/segmenter/: default.yaml
src/conf/speaker/: default.yaml
src/conf/structure/: default.yaml
test_data/: README.md  echi_scene.json  echi_structure.json  echi_template.json
testing/: channel_slice.py  whisper_eg.json  whisper_test.py
tests/: test_echi_scene_generator.py  test_echi_structure_generator.py
