[project]
name = "echi-scene-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "ipython>=8.30.0",
    "matplotlib==3.9.3",
    "mutagen==1.47.0",
    "numpy==2.0.2",
    "omegaconf==2.3.0",
    "pandas==2.2.3",
    "soundfile==0.12.1",
    "transformers==4.47.0",
]
